--- a/index.html
+++ b/index.html
@@ -18,24 +18,35 @@
 
   <div class="containerBanner">
       <div class="center">
+
+        <div class="containerList">
+            <ul>
+              <li>lorem ipsum</li>
+              <li>lorem ipsum</li>
+              <li>lorem ipsum</li>
+              <li>lorem ipsum</li>
+              <li>lorem ipsum</li>              
+            </ul>
+        </div>
+        
           <div class="form">
             <form action="">
               <h2>Preencha o formulário e inicie sua jornada.</h2>
               <form action="">
                 <div class="inputContainer">
                     <span>Nome*</span>                    
-                    <input type="text">
+                    <input type="text" name="nome" required>
 
                     <span>E-mail*</span>
-                    <input type="text">
+                    <input type="text" name="email" required >
 
                     <span>Telefone*</span>
-                    <input type="text">
+                    <input type="text" name="telefone" required>
 
                     <p class="warning">* Campos obrigatórios</p>
 
                     <div class= inputSubmitContainer>
-                      <button type="submit" name="acao">Enviar</button>
+                      <button type="submit" name="acao" value="enviar">Enviar</button>
                     </div>
 
                 </div>
@@ -43,6 +54,10 @@
             </form>
           </div>
       </div>
-  </div>  
+  </div> 
+  
+  <section>
+    div
+  </section>
 </body>
 </html>
