--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               <li>lorem ipsum</li>              
             </ul>
         </div>
-        
+
           <div class="form">
             <form action="">
               <h2>Preencha o formulário e inicie sua jornada.</h2>
@@ -55,9 +55,26 @@
           </div>
       </div>
   </div> 
-  
-  <section>
-    div
-  </section>
+
+  <div class="containerSection">
+    <div class="center">
+      <h2>Lorem Ipsum</h2>
+      <p>
+          é simplesmente um texto fictício da indústria tipográfica e 
+          de impressão. Lorem Ipsum é o texto fictício padrão do setor desde os anos
+           1500, quando uma impressora desconhecida pegou uma galera do tipo e a 
+           mexeu para fazer um livro de amostras do tipo. Ele sobreviveu não apenas 
+           cinco séculos, mas também o salto para a composição eletrônica, permanecendo 
+           essencialmente inalterado. Foi popularizado na década de 1960 com o lançamento
+            de folhas de Letraset contendo passagens de Lorem Ipsum e, mais recentemente, 
+            com software de editoração eletrônica como o Aldus PageMaker, incluindo versões
+             do Lorem Ipsum.
+      </p>
+    </div>
+
+    <div class="arrow"></div>
+  </div>
+
+ 
 </body>
 </html>
