Criando seção 02 e footer

--- a/index.html
+++ b/index.html
@@ -75,6 +75,53 @@
     <div class="arrow"></div>
   </div>
 
- 
+  <div class="section-01">
+    <div class="center">
+    <h2>Aprenda com quem está no mercado</h2>
+
+    <div class="containerSection2">
+
+      <div class="containerSingle">
+        <div><img src="images/icon.png"></div>
+
+        <div class="textContainerSingle">
+          <h2>lorem ipsum</h2>
+          <p>é simplesmente um texto fictício da indústria tipográfica e 
+              de impressão. Lorem Ipsum é o texto fictício padrão do setor 
+              desde os anos
+          </p>
+        </div>
+      </div>
+      <div class="containerSingle">
+          <div><img src="images/icon.png"></div>
+  
+          <div class="textContainerSingle">
+            <h2>lorem ipsum</h2>
+            <p>é simplesmente um texto fictício da indústria tipográfica e 
+                de impressão. Lorem Ipsum é o texto fictício padrão do setor 
+                desde os anos
+            </p>
+          </div>
+        </div>
+        <div class="containerSingle">
+            <div><img src="images/icon.png"></div>
+    
+            <div class="textContainerSingle">
+              <h2>lorem ipsum</h2>
+              <p>é simplesmente um texto fictício da indústria tipográfica e 
+                  de impressão. Lorem Ipsum é o texto fictício padrão do setor 
+                  desde os anos
+              </p>
+            </div>
+          </div>
+    </div>
+    </div>
+  </div>
+
+  <div class="footer">
+
+    <p>Todos os direitos reservados</p>
+    <p>Av. Lorem ipsum, silor domro 211, Florianoplis SC</p>
+  </div>
 </body>
 </html>
