Projeto 1 finalizado com responsivo

--- a/index.html
+++ b/index.html
@@ -18,43 +18,47 @@
 
   <div class="containerBanner">
       <div class="center">
-
-        <div class="containerList">
-            <ul>
-              <li>lorem ipsum</li>
-              <li>lorem ipsum</li>
-              <li>lorem ipsum</li>
-              <li>lorem ipsum</li>
-              <li>lorem ipsum</li>              
-            </ul>
+        <div>
+          <div class="containerList">
+              <ul>
+                <li>lorem ipsum</li>
+                <li>lorem ipsum</li>
+                <li>lorem ipsum</li>
+                <li>lorem ipsum</li>
+                <li>lorem ipsum</li>              
+              </ul>
+          </div>
         </div>
-
+        <div>
           <div class="form">
-            <form action="">
               <h2>Preencha o formulário e inicie sua jornada.</h2>
-              <form action="">
+            <form action="">
                 <div class="inputContainer">
-                    <span>Nome*</span>                    
-                    <input type="text" name="nome" required>
+                  <span>Nome*</span>                    
+                  <input type="text" name="nome" required>
+                </div>
 
-                    <span>E-mail*</span>
-                    <input type="text" name="email" required >
+                <div class="inputContainer">
+                  <span>E-mail*</span>                    
+                  <input type="text" name="nome" required>
+                </div>
 
-                    <span>Telefone*</span>
-                    <input type="text" name="telefone" required>
+                <div class="inputContainer">
+                  <span>Telefone*</span>                    
+                  <input type="text" name="nome" required>
+                </div>                    
 
-                    <p class="warning">* Campos obrigatórios</p>
+                <p class="warning">* Campos obrigatórios</p>
 
-                    <div class= inputSubmitContainer>
-                      <button type="submit" name="acao" value="enviar">Enviar</button>
-                    </div>
-
+                <div class= inputSubmitContainer>
+                  <input type="submit" name="acao" value="Enviar"></input>
                 </div>
               </form>
-            </form>
+            </div>
           </div>
+            <div class="clear"></div>
+        </div>
       </div>
-  </div> 
 
   <div class="containerSection">
     <div class="center">
@@ -62,13 +66,13 @@
       <p>
           é simplesmente um texto fictício da indústria tipográfica e 
           de impressão. Lorem Ipsum é o texto fictício padrão do setor desde os anos
-           1500, quando uma impressora desconhecida pegou uma galera do tipo e a 
-           mexeu para fazer um livro de amostras do tipo. Ele sobreviveu não apenas 
-           cinco séculos, mas também o salto para a composição eletrônica, permanecendo 
-           essencialmente inalterado. Foi popularizado na década de 1960 com o lançamento
-            de folhas de Letraset contendo passagens de Lorem Ipsum e, mais recentemente, 
-            com software de editoração eletrônica como o Aldus PageMaker, incluindo versões
-             do Lorem Ipsum.
+          1500, quando uma impressora desconhecida pegou uma galera do tipo e a 
+          mexeu para fazer um livro de amostras do tipo. Ele sobreviveu não apenas 
+          cinco séculos, mas também o salto para a composição eletrônica, permanecendo 
+          essencialmente inalterado. Foi popularizado na década de 1960 com o lançamento
+          de folhas de Letraset contendo passagens de Lorem Ipsum e, mais recentemente, 
+          com software de editoração eletrônica como o Aldus PageMaker, incluindo versões
+          do Lorem Ipsum.
       </p>
     </div>
 
@@ -114,8 +118,9 @@
               </p>
             </div>
           </div>
-    </div>
-    </div>
+          <div class="clear"></div>
+      </div>
+      </div>
   </div>
 
   <div class="footer">
